--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -13,8 +13,8 @@
                  <!-- new code here -->
                  <div class="row">
                     <div class="col input-div">
-                      <img ng-src="{{prodimg|serverimage}}" alt="">
-                       <div class="image-hold" ng-style="{'background-image':'url({{prodimg|serverimage}})'}"  ng-click="changeproductimage(i.id);"></div>
+                      <img ng-src="{{prodimg|serverimage}}">
+                       <!-- <div class="image-hold" ng-style="{'background-image':'url({{prodimg|serverimage}})'}"  ng-click="changeproductimage(i.id);"></div> -->
                        <!-- <p  class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsPhoto(i.id)">Delete</p> -->
                     </div>
                  </div>
