--- a/www/css/style.css
+++ b/www/css/style.css
@@ -744,10 +744,6 @@ ion-item.item.item-thumbnail-left.trns-add {
 .row.nopad>.col {
   padding: 0px;
 }
-.input-div img {
-  width: 100%;
-  height: 60px;
-}
 .membershipno input {
   background: #FFF;
   width: 100%;
@@ -1215,3 +1211,12 @@ a.tab-item.active-tab {
     height: auto !important;
     width: auto;
   }
+.bod-bottom.item-thumbnail-left>img {
+  position: absolute;
+  top: 6px;
+  left: 15px;
+  max-width: 80px;
+  max-height: 80px;
+  width: auto;
+  height: auto;
+}
