--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -11,13 +11,34 @@
             <div class="list">
                <div class="profile-img">
                  <!-- new code here -->
-                 <div class="row">
+               <div class="row">
+
+                   <div class="col input-div" >
+                      <div class="img-profile">
+                         <img src="img/add.png">
+                         <div class="holder2">Edit</div>
+                      </div>
+                   </div>
+                   <div class="col input-div" >
+                      <div class="img-profile">
+                         <img src="img/add.png">
+                         <div class="holder2">Edit</div>
+                      </div>
+                   </div>
+                   <div class="col input-div">
+                      <div class="img-profile">
+                         <img src="img/add.png">
+                         <div class="holder2">Edit</div>
+                      </div>
+                   </div>
+
+                </div>
+                 <!-- <div class="row">
                     <div class="col input-div">
                       <img ng-src="{{prodimg|serverimage}}">
-                       <!-- <div class="image-hold" ng-style="{'background-image':'url({{prodimg|serverimage}})'}"  ng-click="changeproductimage(i.id);"></div> -->
-                       <!-- <p  class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsPhoto(i.id)">Delete</p> -->
+
                     </div>
-                 </div>
+                 </div> -->
                </div>
 
                                         <!-- <div class="holder">Add Image</div> -->
