--- a/www/templates/pop-image.html
+++ b/www/templates/pop-image.html
@@ -1,9 +1,9 @@
 <div class="modal image-modal transparent" ng-click="closeModals()">
     <div class="modal image-modal transparent" ng-click="closeModals()">
         <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false">
-            <ion-slide ng-repeat="i in img">
-                <img ng-src="{{i.photo|serverimage}}" class="fullscreen-image" />
-                <!--                <p class="info">{{oImage.msg}}</p>-->
+            <ion-slide >
+                <img src="img/add.png" class="fullscreen-image" />
+
             </ion-slide>
         </ion-slide-box>
     </div>
