--- a/www/templates/home-hotel.html
+++ b/www/templates/home-hotel.html
@@ -36,12 +36,12 @@
                     </div>
                     <select ng-model="hotel.hotelname" ng-class="allvalidation[1].validation">
                         <option value="">Select</option>
-                        <option value="Indus valley resort:- Lonavala">Indus valley resort:- Lonavala</option>
-                        <option value="Mid way Park:- Shahpur">Mid way Park:- Shahpur</option>
-                        <option value="Coral Lake Resort:- Karjat">Coral Lake Resort:- Karjat</option>
-                        <option value="Lossapa Resort:- Karjat">Lossapa Resort:- Karjat</option>
-                        <option value="Hotel Ashwin:- Igatpuri">Hotel Ashwin:- Igatpuri</option>
-                        <option value="Mount Castle:- Panchgini">Mount Castle:- Panchgini</option>
+                        <option value="Indus valley resort:- (Lonavala)">Indus valley resort:- (Lonavala)</option>
+                        <option value="Mid way Park:- (Shahpur)">Mid way Park:- (Shahpur)</option>
+                        <option value="Coral Lake Resort:- (Karjat)">Coral Lake Resort:- (Karjat)</option>
+                        <option value="Lossapa Resort:- (Karjat)">Lossapa Resort:- (Karjat)</option>
+                        <option value="Hotel Ashwin:- (Igatpuri)">Hotel Ashwin:- (Igatpuri)</option>
+                        <option value="Mount Castle:- (Panchgini)">Mount Castle:- (Panchgini)</option>
                         <option value="Gingertree beach resort:- Calangute (Goa)">Gingertree beach resort:- Calangute (Goa)</option>
                         <option value="Goveia holiday homes:- Calangute (Goa)">Goveia holiday homes:- Calangute (Goa)</option>
                         <option value="Ruffels beach Resort:- Calangute (Goa)">Ruffels beach Resort:- Calangute (Goa)</option>
@@ -52,13 +52,32 @@
                         <option value="Riva Beach Resort:- Arambol (Goa)">Riva Beach Resort:- Arambol (Goa)</option>
                         <option value="Annapurna vishramdham:- Baga (Goa)">Annapurna vishramdham:- Baga (Goa)</option>
                         <option value="Castle House:- Calangute (Goa)">Castle House:- Calangute (Goa)</option>
-                        <option value="Snow valley Resort:- Manali">Snow valley Resort:- Manali</option>
-                        <option value="Camp Exotica:- Manali">Camp Exotica:- Manali</option>
-                        <option value="Snow valley Resort:- Shimla">Snow valley Resort:- Shimla</option>
+                        <option value="Snow valley Resort:- (Manali)">Snow valley Resort:- (Manali)</option>
+                        <option value="Camp Exotica:- (Manali)">Camp Exotica:- (Manali)</option>
+                        <option value="Snow valley Resort:- (Shimla)">Snow valley Resort:- (Shimla)</option>
                         <option value="Country Inn & Spa:- Kovalam (Kerala)">Country Inn & Spa:- Kovalam (Kerala)</option>
                         <option value="Beach & Lake:- Kovalam (Kerala)">Beach & Lake:- Kovalam (Kerala)</option>
                         <option value="Sea Face:- Kovalam (Kerala)">Sea Face:- Kovalam (Kerala)</option>
                         <option value="Holiday Vista:- Thhekkady (Kerala)">Holiday Vista:- Thhekkady (Kerala)</option>
+                         <option value="Wild Chalet Resort :- Kanha National Park (Karnataka)">Wild Chalet Resort :- Kanha National Park (Karnataka)</option>
+                            <option value="Bison River Resort:- Dandeli Wildlife Sanctuary (Karnataka)
+">Bison River Resort:- Dandeli Wildlife Sanctuary (Karnataka)
+</option>
+       <option value="Tiger Trails Resort:- Bandhavgarh National Park (Madhya Pradesh)
+">Tiger Trails Resort:- Bandhavgarh National Park (Madhya Pradesh)
+</option>
+ <option value="Tiger Moon Resort:- Ranthambore National Park (Rajasthan)
+">Tiger Moon Resort:- Ranthambore National Park (Rajasthan)
+</option>
+ <option value="Movenpick Hotel and Spa (Banglore)
+">Movenpick Hotel and Spa (Banglore)
+</option>
+<option value="Svenska Design Hotel (Banglore )
+">Svenska Design Hotel (Banglore )
+</option>
+<option value="Tavisha (Delhi)
+">Tavisha (Delhi)
+</option>
                     </select>
                 </label>
                 <label class="item item-input">
