--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -11,28 +11,61 @@
         <div class="list">
           <div class="profile-img">
             <!-- new code here -->
+
             <div class="row">
-
-              <div class="col input-div">
+              <!--<div class="col input-div" ng-repeat="img in prodetails.images" ng-click="openPop()">-->
+              <!--<div class="col input-div" ng-repeat="img in prodetails.images">
+                <div class="image-hold" ng-style="{'background-image':'url({{img.image|serverimage}})'}"></div>
+                <p class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsImage(img.id)">Delete</p>
+              </div>-->
+              <!--<div class="col input-div" ng-if="prodetails.images.length==0" ng-click="addproductimage();">
+                <div class="img-profile">
+                  <img src="img/add.png">
+                  <div class="holder2">Edit</div>
+                </div>
+              </div>-->
+              <div class="col input-div" ng-click="addproductimage();">
                 <div class="img-profile">
                   <img src="img/add.png">
                   <div class="holder2">Edit</div>
                 </div>
               </div>
-              <div class="col input-div">
+              <div class="col input-div" ng-click="addproductimage();">
                 <div class="img-profile">
                   <img src="img/add.png">
                   <div class="holder2">Edit</div>
                 </div>
               </div>
-              <div class="col input-div">
+              <div class="col input-div" ng-click="addproductimage();">
                 <div class="img-profile">
                   <img src="img/add.png">
                   <div class="holder2">Edit</div>
                 </div>
               </div>
-
+              <!--</div>-->
             </div>
+            <!--<div class="row">
+
+              <div class="col input-div">
+                <div class="img-profile">
+                  <img src="img/add.png">
+                  <div class="holder2">Edit</div>
+                </div>
+              </div>
+              <div class="col input-div">
+                <div class="img-profile">
+                  <img src="img/add.png">
+                  <div class="holder2">Edit</div>
+                </div>
+              </div>
+              <div class="col input-div">
+                <div class="img-profile">
+                  <img src="img/add.png">
+                  <div class="holder2">Edit</div>
+                </div>
+              </div>
+
+            </div>-->
 
             <!--// row ends here-->
 
