--- a/www/templates/productedit.html
+++ b/www/templates/productedit.html
@@ -26,19 +26,19 @@
                         <div class="col input-div" ng-if="prodetails.images.length==0">
                             <div class="img-profile">
                                 <img src="img/add.png">
-                                <div class="holder2">Edit</div>
+                                <!--<div class="holder2">Edit</div>-->
                             </div>
                         </div>
                         <div class="col input-div" ng-if="prodetails.images.length==0 || prodetails.images.length==1">
                             <div class="img-profile">
                                 <img src="img/add.png">
-                                <div class="holder2">Edit</div>
+                                <!--<div class="holder2">Edit</div>-->
                             </div>
                         </div>
                         <div class="col input-div" ng-if="prodetails.images.length==0 || prodetails.images.length==1 || prodetails.images.length==2">
                             <div class="img-profile">
                                 <img src="img/add.png">
-                                <div class="holder2">Edit</div>
+                                <!--<div class="holder2">Edit</div>-->
                             </div>
                         </div>
                         <!--</div>-->
