--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -83,10 +83,10 @@
           <input type="text " placeholder="Name " ng-model="ap.name " ng-class="allvalidation[0].validation " required>
         </div>
         <div class="item item-input ">
-          <input type="tel " placeholder="Price " ng-model="ap.price " ng-class="allvalidation[1].validation " required>
+          <input type="number" placeholder="Price " ng-model="ap.price " ng-class="allvalidation[1].validation " required>
         </div>
         <div class="item item-input ">
-          <input type="tel " min="1 " placeholder="Quantity " ng-model="ap.quantity " ng-class="allvalidation[2].validation " required>
+          <input type="number" min="1 " placeholder="Quantity " ng-model="ap.quantity " ng-class="allvalidation[2].validation " required>
         </div>
         <label class="item item-input item-select area ">
                   <div class="input-label ">
