3 images on detail page

--- a/www/templates/buydetails.html
+++ b/www/templates/buydetails.html
@@ -2,13 +2,20 @@
     <ion-content class="padding">
         <div class="incard">
             <div class="profile-img">
-                <img ng-src={{getsinglepro.image|serverimage}}>
+                <div class="row">
+                    <div class="col" ng-repeat="imgarr in getsinglepro.images">
+                        <img ng-src={{imgarr.image|serverimage}} class="full-image">
+                    </div>
+                    <!--<div class="col">
+                        <img ng-src={{getsinglepro.image|serverimage}} class="full-image">
+                    </div>
+
+                    <div class="col">
+                        <img ng-src={{getsinglepro.image|serverimage}} class="full-image">
+                    </div>-->
+                </div>
+
                 <h3>{{getsinglepro.name}}</h3>
-                <!-- <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" auto-play="true" ng-if="sliderImage" does-continue="true">
-                  <ion-slide ng-repeat="img in sliderImage">
-                      <img ng-src="{{img.image | serverimage}}" class="full-image" ng-click="openshops($index);"/>
-                  </ion-slide>
-              </ion-slide-box> -->
             </div>
             <div class="list padtop5">
 
